--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Benjamin Velliquette",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-vue": "^2.16.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
