--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "dev": "concurrently \"nodemon server/index.js\"  \"cd client && npm run serve && cd ..\""
   },
   "author": "Benjamin Velliquette",
   "license": "MIT",
   "dependencies": {
     "bootstrap-vue": "^2.16.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
