--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "concurrently \"nodemon server/index.js\"  \"cd client && npm run serve && cd ..\""
+    "dev": "concurrently \"nodemon server/index.js\"  \"cd client && npm run serve && cd ..\"",
+    "build": "cd client && npm run build && cd .."
   },
   "author": "Benjamin Velliquette",
   "license": "MIT",
