--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Benjamin Velliquette",
   "license": "MIT",
   "dependencies": {
+    "@vue/cli-service": "^4.5.6",
     "bootstrap-vue": "^2.16.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
