--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
     "mongoose": "^5.10.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "v-calendar": "^1.0.8",
+    "vue2-timepicker": "^1.1.4"
   }
 }
