--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/cli-service": "^4.5.6",
     "bootstrap-vue": "^2.16.0",
     "concurrently": "^5.3.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
